--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,21 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+.location {
+  width: 100%;
+  height: 40px;
+  background-image: linear-gradient(150deg, #e60012, #fff);
+}
+
+.location span {
+  padding-left: 15px;
+  color: #fff;
+}
+
+.location button {
+  position: absolute;
+  right: 15px;
+  border-radius: 5px;
+  border: 1px solid #fff;
+  color: #fff;
+  background-color: rgba(0, 0, 0, 0);
+  padding: 4px 0 2px 0;
+}
+/*# sourceMappingURL=style.css.map */
