--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,269 @@
+@import url("common.css");
 .location {
   width: 100%;
   height: 40px;
-  background-image: linear-gradient(150deg, #e60012, #fff);
+  background: -webkit-gradient(linear, left top, right top, from(#f25170), to(#facd89));
+  background: linear-gradient(90deg, #f25170, #facd89);
 }
 
 .location span {
-  padding-left: 15px;
+  margin-left: 15px;
+  display: inline-block;
   color: #fff;
 }
 
 .location button {
-  position: absolute;
-  right: 15px;
+  margin-right: 15px;
   border-radius: 5px;
   border: 1px solid #fff;
   color: #fff;
   background-color: rgba(0, 0, 0, 0);
-  padding: 4px 0 2px 0;
+  padding: 4px 6px 2px;
+  width: 85px;
+  height: 30px;
+}
+
+.location button img {
+  width: 12px;
+}
+
+.background {
+  background: #e6e6eb;
+}
+
+.background .searchbox {
+  width: 100%;
+  padding: 10px 4% 15px;
+  background: #fff;
+}
+
+.background .searchbox .inputarea {
+  position: relative;
+  padding: 10px 0;
+  margin: 0 auto;
+  border-bottom: 1px solid #222228;
+}
+
+.background .searchbox .inputarea:before {
+  position: absolute;
+  top: 13px;
+  left: 0;
+  content: "";
+  width: 19px;
+  height: 19px;
+  background: url(../img/ic_glass-on.png) no-repeat;
+  background-size: 100% 100%;
+}
+
+.background .searchbox .inputarea input {
+  border: none;
+  margin-left: 5%;
+  padding-left: 5%;
+  width: 90%;
+  height: 28px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  display: block;
+  margin: auto;
+  font-size: 18px;
+}
+
+.background .searchbox .inputarea div img {
+  width: 20px;
+}
+
+.background .nearbox {
+  background: #fff;
+  margin-top: 10px;
+  padding-top: 10px;
+}
+
+.background .nearbox .nearby {
+  padding: 0 15px;
+}
+
+.background .nearbox .nearby h3 {
+  font-size: 18px;
+  margin-bottom: 5px;
+}
+
+.background .nearbox .nearby p {
+  color: #9999a0;
+}
+
+.background .nearbox .nearby p span {
+  font-size: 14px;
+}
+
+.background .nearbox .mapbox {
+  border-top: 1px solid #e6e6eb;
+  margin-top: 20px;
+}
+
+.background .nearbox .mapbox .distance {
+  padding-top: 10px;
+  margin-bottom: 5px;
+}
+
+.background .nearbox .mapbox .map {
+  height: 138px;
+}
+
+.background .nearbox .listbox ul {
+  font-size: 14px;
+}
+
+.background .nearbox .listbox ul li {
+  position: relative;
+  padding: 16px 15px;
+  border-bottom: 1px solid #e6e6eb;
+  width: 100%;
+}
+
+.background .nearbox .listbox ul li .leftsec {
+  display: inline-block;
+  width: 20%;
+  font-size: 0;
+  vertical-align: top;
+  height: 70px;
+  overflow: hidden;
+  background: url(../img/tangocafe.jpg) center no-repeat;
+  background-size: auto 100%;
+}
+
+.background .nearbox .listbox ul li .rightsec {
+  width: 80%;
+  display: inline-block;
+  vertical-align: top;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 0 10px;
+  font-size: 0;
+}
+
+.background .nearbox .listbox ul li .rightsec h4 {
+  font-size: 16px;
+  margin-bottom: 6px;
+  position: relative;
+}
+
+.background .nearbox .listbox ul li .rightsec h4 .list_lo {
+  font-size: 12px;
+  color: #999999;
+}
+
+.background .nearbox .listbox ul li .rightsec .info {
+  color: #9999a0;
+  margin-bottom: 6px;
+}
+
+.background .nearbox .listbox ul li .rightsec .info .list_dis {
+  font-size: 12px;
+  color: #999999;
+}
+
+.background .nearbox .listbox ul li .rightsec .appraisal .like {
+  background: url(../img/ic_like.png) no-repeat;
+  background-size: 16px 16px;
+  padding-left: 21px;
+}
+
+.background .nearbox .listbox ul li .rightsec .appraisal .write {
+  margin-left: 14px;
+  background: url(../img/ic_write.png) no-repeat;
+  background-size: 16px 16px;
+  padding-left: 21px;
+}
+
+.background .nearbox .listbox ul li a {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.background .nearbox .morebox a {
+  display: inline-block;
+  padding-right: 22px;
+  width: 50%;
+  height: 45px;
+  font-size: 14px;
+  line-height: 45px;
+  text-align: center;
+  background: #f9f9fa;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.background .nearbox .morebox .morelist {
+  background: url(../img/ic_list.png) 80% 50% no-repeat;
+  background-size: 17px 24px;
+}
+
+.background .nearbox .morebox .moremap {
+  background: url(../img/ic_map.png) 80% 50% no-repeat;
+  background-size: 17px 24px;
+  border-left: 1px solid #e6e6eb;
+}
+
+.background .nearbox .footLink {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  z-index: 100;
+  width: 100%;
+  height: 9%;
+  text-align: center;
+  border-top: 1px solid #e6e6eb;
+  background: #fff;
+}
+
+.background .nearbox .footLink a {
+  display: inline-block;
+  font-size: 10px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  width: 33%;
+  height: 100%;
+  padding-top: 36px;
+  vertical-align: top;
+  position: relative;
+}
+
+.background .nearbox .footLink .home:before {
+  background: url(../img/ic_glassoff.png) no-repeat;
+  background-size: 100% 100%;
+  width: 32px;
+  height: 32px;
+  content: '';
+  position: absolute;
+  top: 3px;
+  left: 50%;
+  margin-left: -16px;
+}
+
+.background .nearbox .footLink .search:before {
+  background: url(../img/ic_glass-off.png) no-repeat;
+  background-size: 100% 100%;
+  width: 32px;
+  height: 32px;
+  content: '';
+  position: absolute;
+  top: 3px;
+  left: 50%;
+  margin-left: -16px;
+}
+
+.background .nearbox .footLink .about:before {
+  background: url(../img/ic_Guide-Off.png) center no-repeat;
+  background-size: 70% 70%;
+  width: 32px;
+  height: 32px;
+  content: '';
+  position: absolute;
+  top: 3px;
+  left: 50%;
+  margin-left: -16px;
 }
 /*# sourceMappingURL=style.css.map */
