--- a/css/style.scss
+++ b/css/style.scss
@@ -211,7 +211,7 @@ $borc:#e6e6eb;
             }
             .home{
                 &:before{
-                    background:url(../img/ic_glassoff.png) no-repeat;
+                    background:url(../img/tango.png) no-repeat;
                     background-size:100% 100%;
                     width:32px; height:32px;
                     content:'';
