--- a/css/style.css
+++ b/css/style.css
@@ -232,7 +232,7 @@
 }
 
 .background .nearbox .footLink .home:before {
-  background: url(../img/ic_glassoff.png) no-repeat;
+  background: url(../img/tango.png) no-repeat;
   background-size: 100% 100%;
   width: 32px;
   height: 32px;
