--- a/css/calender.scss
+++ b/css/calender.scss
@@ -9,7 +9,7 @@ $borc: #e6e6eb;
     top: 0;
     padding: 2vw 0 0 2vw;
     z-index: 100;
-    width: 100%;
+    width: 100%; height:auto;
     background: #fff;
     a {
         display: inline-block;
@@ -24,7 +24,7 @@ $borc: #e6e6eb;
 .headerback {
     position: relative;
     padding: 2vw 0 0 2vw;
-    width: 100%;
+    width: 100%; height:10vh;
     background: #fff;
     opacity: 0;
     a {
@@ -34,34 +34,6 @@ $borc: #e6e6eb;
 
         img {
             width: 100%;
-        }
-    }
-}
-.location {
-    width: 100%;
-    padding: 2vw;
-    position: relative;
-    background: linear-gradient(90deg, $mc, #facd89);
-    span {
-        margin-left: 15px;
-        display: inline-block;
-        color: #fff;
-        font-size: 17px;
-    }
-
-    button {
-        margin-right: 15px;
-        border-radius: 5px;
-        border: 1px solid #fff;
-        color: #fff;
-        background-color: rgba(0, 0, 0, 0);
-        padding: 4px 6px 2px;
-        font-size: 17px;
-        width: 102px;
-        height: 44px;
-
-        img {
-            width: 4vw;
         }
     }
 }
@@ -125,159 +97,69 @@ $borc: #e6e6eb;
             }
         }
     }
-    .searchbox {
-        width: 100%;
-        padding: 3vw 5vw;
-        background: #fff;
-        .inputarea {
-            position: relative;
-            padding: 10px 0;
-            margin: 0 auto;
-
-            border-bottom: 1px solid #222228;
-            &:before {
-                position: absolute;
-                top: 13px;
-                left: 0;
-                content: "";
-                width: 19px;
-                height: 19px;
-                background: url(../img/ic_glass-on.png) no-repeat;
-                background-size: 100% 100%;
-            }
-            input {
-                border: none;
-                margin-left: 5%;
-                padding-left: 5%;
-                width: 90%;
-                height: 28px;
-                box-sizing: border-box;
-                display: block;
-                margin: auto;
-                font-size: 18px;
-            }
-            div {
-                img {
-                    width: 20px;
+    .listbox {
+        ul {
+            font-size: 14px;
+            li {
+                position: relative;
+                padding: 16px 15px;
+                border-bottom: 1px solid $borc;
+                width: 100%;
+                .leftsec {
+                    display: inline-block;
+                    width: 20%;
+                    font-size: 0;
+                    vertical-align: top;
+                    height: 70px;
+                    overflow: hidden;
+                    background: url(../img/tangocafe.jpg) center no-repeat;
+                    background-size: auto 100%;
                 }
-            }
-        }
-    }
-    .nearbox {
-        background: #fff;
-        margin-top: 10px;
-        padding-top: 10px;
-        .nearby {
-            padding: 0 15px;
-            h3 {
-                font-size: 18px;
-                margin-bottom: 5px;
-            }
-            p {
-                color: #9999a0;
-
-                span {
-                    font-size: 14px;
+                .rightsec {
+                    width: 80%;
+                    display: inline-block;
+                    vertical-align: top;
+                    box-sizing: border-box;
+                    padding: 0 10px;
+                    font-size: 0;
+                    h4 {
+                        font-size: 16px;
+                        margin-bottom: 6px;
+                        position: relative;
+                        .list_lo {
+                            font-size: 12px;
+                            color: #999999;
+                        }
+                    }
+                    .info {
+                        color: #9999a0;
+                        margin-bottom: 6px;
+                        .list_dis {
+                            font-size: 12px;
+                            color: #999999;
+                        }
+                    }
+                    .appraisal {
+                        .like {
+                            background: url(../img/ic_like.png) no-repeat;
+                            background-size: 16px 16px;
+                            padding-left: 21px;
+                        }
+                        .write {
+                            margin-left: 14px;
+                            background: url(../img/ic_write.png) no-repeat;
+                            background-size: 16px 16px;
+                            padding-left: 21px;
+                        }
+                    }
                 }
-            }
-        }
-        .mapbox {
-            border-top: 1px solid $borc;
-            margin-top: 20px;
-            .distance {
-                padding-top: 10px;
-                margin-bottom: 5px;
-            }
-            .map {
-                height: 138px;
-            }
-        }
-        .listbox {
-            ul {
-                font-size: 14px;
-                li {
-                    position: relative;
-                    padding: 16px 15px;
-                    border-bottom: 1px solid $borc;
+                a {
                     width: 100%;
-                    .leftsec {
-                        display: inline-block;
-                        width: 20%;
-                        font-size: 0;
-                        vertical-align: top;
-                        height: 70px;
-                        overflow: hidden;
-                        background: url(../img/tangocafe.jpg) center no-repeat;
-                        background-size: auto 100%;
-                    }
-                    .rightsec {
-                        width: 80%;
-                        display: inline-block;
-                        vertical-align: top;
-                        box-sizing: border-box;
-                        padding: 0 10px;
-                        font-size: 0;
-                        h4 {
-                            font-size: 16px;
-                            margin-bottom: 6px;
-                            position: relative;
-                            .list_lo {
-                                font-size: 12px;
-                                color: #999999;
-                            }
-                        }
-                        .info {
-                            color: #9999a0;
-                            margin-bottom: 6px;
-                            .list_dis {
-                                font-size: 12px;
-                                color: #999999;
-                            }
-                        }
-                        .appraisal {
-                            .like {
-                                background: url(../img/ic_like.png) no-repeat;
-                                background-size: 16px 16px;
-                                padding-left: 21px;
-                            }
-                            .write {
-                                margin-left: 14px;
-                                background: url(../img/ic_write.png) no-repeat;
-                                background-size: 16px 16px;
-                                padding-left: 21px;
-                            }
-                        }
-                    }
-                    a {
-                        width: 100%;
-                        height: 100%;
-                        position: absolute;
-                        top: 0;
-                        left: 0;
-                    }
+                    height: 100%;
+                    position: absolute;
+                    top: 0;
+                    left: 0;
                 }
-            }
-        }
-        .morebox {
-            a {
-                display: inline-block;
-                padding-right: 22px;
-                width: 50%;
-                height: 45px;
-                font-size: 14px;
-                line-height: 45px;
-                text-align: center;
-                background: #f9f9fa;
-                box-sizing: border-box;
-            }
-            .morelist {
-                background: url(../img/ic_list.png) 80% 50% no-repeat;
-                background-size: 17px 24px;
-            }
-            .moremap {
-                background: url(../img/ic_map.png) 80% 50% no-repeat;
-                background-size: 17px 24px;
-                border-left: 1px solid $borc;
             }
         }
     }
