--- a/css/join.css
+++ b/css/join.css
@@ -1,5 +1,5 @@
 @import url("common.css");
-.background .page .today-list, .background .calbox .calby {
+.background .look .look-list, .background .like .like-list, .background .review .review-list {
   border-radius: 4vw;
   -webkit-box-shadow: 0.5vw 0.5vw 4vw 0.5vw rgba(59, 59, 59, 0.15);
           box-shadow: 0.5vw 0.5vw 4vw 0.5vw rgba(59, 59, 59, 0.15);
@@ -7,7 +7,7 @@
   padding: 6vw 0;
 }
 
-.background .page .today-list h2, .background .calbox .calby h2 {
+.background .look .look-list h2, .background .like .like-list h2, .background .review .review-list h2 {
   font-size: 7vw;
   font-weight: 900;
   padding: 0 4vw;
@@ -47,11 +47,11 @@
   background: #e6e6eb;
 }
 
-.background .page {
+.background .look {
   margin: 6vw 4vw;
 }
 
-.background .page .today-list .data-wrap {
+.background .look .look-list .data-wrap {
   background: #fff;
   padding: 4vw;
   width: 100%;
@@ -60,7 +60,7 @@
   overflow: hidden;
 }
 
-.background .page .today-list .data-wrap .today-wrap {
+.background .look .look-list .data-wrap .today-wrap {
   position: absolute;
   left: 0;
   top: 4vw;
@@ -72,24 +72,24 @@
       flex-wrap: nowrap;
 }
 
-.background .page .today-list .data-wrap .today-wrap li {
+.background .look .look-list .data-wrap .today-wrap li {
   float: left;
   width: 53vw;
   margin-right: 4vw;
 }
 
-.background .page .today-list .data-wrap .today-wrap li .thumb {
+.background .look .look-list .data-wrap .today-wrap li .thumb {
   width: 100%;
   height: 53vw;
 }
 
-.background .page .today-list .data-wrap .today-wrap li .thumb img {
+.background .look .look-list .data-wrap .today-wrap li .thumb img {
   width: 100%;
   height: 100%;
   border-radius: 3vw;
 }
 
-.background .page .today-list .data-wrap .today-wrap li .summary h3 {
+.background .look .look-list .data-wrap .today-wrap li .summary h3 {
   white-space: nowrap;
   font-size: 4.7vw;
   margin-top: 2vw;
@@ -97,7 +97,7 @@
   width: 70%;
 }
 
-.background .page .today-list .data-wrap .today-wrap li .summary small {
+.background .look .look-list .data-wrap .today-wrap li .summary small {
   opacity: 0.7;
   font-size: 3.1vw;
   display: block;
@@ -110,16 +110,130 @@
   white-space: nowrap;
 }
 
-.background .calbox {
+.background .like {
   margin: 6vw 4vw;
 }
 
-.background .calbox .calby .calender {
+.background .like .like-list .data-wrap {
   background: #fff;
   padding: 4vw;
   width: 100%;
   height: 77vw;
-  margin: 0 auto;
+  position: relative;
+  overflow: hidden;
+}
+
+.background .like .like-list .data-wrap .today-wrap {
+  position: absolute;
+  left: 0;
+  top: 4vw;
+  margin-left: 4vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+}
+
+.background .like .like-list .data-wrap .today-wrap li {
+  float: left;
+  width: 53vw;
+  margin-right: 4vw;
+}
+
+.background .like .like-list .data-wrap .today-wrap li .thumb {
+  width: 100%;
+  height: 53vw;
+}
+
+.background .like .like-list .data-wrap .today-wrap li .thumb img {
+  width: 100%;
+  height: 100%;
+  border-radius: 3vw;
+}
+
+.background .like .like-list .data-wrap .today-wrap li .summary h3 {
+  white-space: nowrap;
+  font-size: 4.7vw;
+  margin-top: 2vw;
+  font-weight: 500;
+  width: 70%;
+}
+
+.background .like .like-list .data-wrap .today-wrap li .summary small {
+  opacity: 0.7;
+  font-size: 3.1vw;
+  display: block;
+  margin-top: 1.5vw;
+  color: #898989;
+  width: 60%;
+  height: 30px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.background .review {
+  margin: 6vw 4vw;
+}
+
+.background .review .review-list .data-wrap {
+  background: #fff;
+  padding: 4vw;
+  width: 100%;
+  height: 77vw;
+  position: relative;
+  overflow: hidden;
+}
+
+.background .review .review-list .data-wrap .today-wrap {
+  position: absolute;
+  left: 0;
+  top: 4vw;
+  margin-left: 4vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+}
+
+.background .review .review-list .data-wrap .today-wrap li {
+  float: left;
+  width: 53vw;
+  margin-right: 4vw;
+}
+
+.background .review .review-list .data-wrap .today-wrap li .thumb {
+  width: 100%;
+  height: 53vw;
+}
+
+.background .review .review-list .data-wrap .today-wrap li .thumb img {
+  width: 100%;
+  height: 100%;
+  border-radius: 3vw;
+}
+
+.background .review .review-list .data-wrap .today-wrap li .summary h3 {
+  white-space: nowrap;
+  font-size: 4.7vw;
+  margin-top: 2vw;
+  font-weight: 500;
+  width: 70%;
+}
+
+.background .review .review-list .data-wrap .today-wrap li .summary small {
+  opacity: 0.7;
+  font-size: 3.1vw;
+  display: block;
+  margin-top: 1.5vw;
+  color: #898989;
+  width: 60%;
+  height: 30px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .footLink {
@@ -205,4 +319,4 @@
   vertical-align: top;
   position: relative;
 }
-/*# sourceMappingURL=calender.css.map */
+/*# sourceMappingURL=join.css.map */
