--- a/css/style.scss
+++ b/css/style.scss
@@ -337,7 +337,7 @@ $borc: #e6e6eb;
     }
     .search {
         &:before {
-            background: url(../img/ic_glass-off.png) no-repeat;
+            background: url(../img/ic_person-off.png) no-repeat;
             background-size: 100% 100%;
             width: 32px;
             height: 32px;
@@ -350,8 +350,8 @@ $borc: #e6e6eb;
     }
     .about {
         &:before {
-            background: url(../img/ic_Guide-Off.png) center no-repeat;
-            background-size: 70% 70%;
+            background: url(../img/ic_guide-off.png) center no-repeat;
+            background-size: 80% 80%;
             width: 32px;
             height: 32px;
             content: "";
@@ -382,43 +382,5 @@ $borc: #e6e6eb;
         vertical-align: top;
         position: relative;
     }
-    .home {
-        &:before {
-            background: url(../img/ic_logo.png) no-repeat;
-            background-size: 100% 100%;
-            width: 32px;
-            height: 32px;
-            content: "";
-            position: absolute;
-            top: 3px;
-            left: 50%;
-            margin-left: -16px;
-        }
+    
     }
-    .search {
-        &:before {
-            background: url(../img/ic_glass-off.png) no-repeat;
-            background-size: 100% 100%;
-            width: 32px;
-            height: 32px;
-            content: "";
-            position: absolute;
-            top: 3px;
-            left: 50%;
-            margin-left: -16px;
-        }
-    }
-    .about {
-        &:before {
-            background: url(../img/ic_Guide-Off.png) center no-repeat;
-            background-size: 70% 70%;
-            width: 32px;
-            height: 32px;
-            content: "";
-            position: absolute;
-            top: 3px;
-            left: 50%;
-            margin-left: -16px;
-        }
-    }
-}
