--- a/css/join.scss
+++ b/css/join.scss
@@ -19,33 +19,76 @@ $borc: #e6e6eb;
     position: fixed;
     left: 0;
     top: 0;
-    padding: 2vw 0 0 2vw;
+    padding: 2vw;
     z-index: 100;
     width: 100%;
     height: auto;
     background: #fff;
-    a {
-        display: block;
-        float: left;
-        width: 24vw;
+    border-bottom: 1px solid $borc;
 
-        img {
-            width: 100%;
-        }
+    p {
+       text-align:center;
+            
     }
 }
 .headerback {
     position: relative;
     padding: 2vw 0 0 2vw;
     width: 100%;
-    height: 10vh;
+    height: 10vw;
     background: #fff;
     opacity: 0;
    
 }
 .background {
     background: $bc;
-  
+  .profile{
+      background:#fff;
+      height:77vw;
+      .pf_img{
+
+          flex-direction:column;
+          a{
+            width:50vw;
+            height:50vw;
+            background:conic-gradient(#f00 , #ffff00 70%,#ffae00 ,#f00);
+            border-radius:100%;
+            position:relative;
+            z-index:3;
+            overflow:hidden;
+            &:after{
+                position:absolute;
+                z-index:0;
+                width:98%; height:98%;
+                background:#fff;
+                background-size:100% 100%;
+                content:'';
+                left:1%; top:1%;
+                border-radius:100%;
+            }
+              img{
+                  z-index:2;
+                  position:absolute;
+                  left:2%; top:2%;
+                  width:96%; height:96%;
+               border-radius:100%;
+              }
+              p{
+                white-space: nowrap;
+                font-size: 4.7vw;
+              }
+          }
+      }
+      .myinfo{
+          .follow{
+              .info_view{
+                  .view{}
+                  .reset{}
+                  .point{}
+              }
+          }
+      }
+  }
 
     .look {
         margin: 6vw 4vw;
