--- a/css/join.scss
+++ b/css/join.scss
@@ -44,13 +44,13 @@ $borc: #e6e6eb;
     background: $bc;
   .profile{
       background:#fff;
-      height:77vw;
+           
       .pf_img{
-
+        padding:4vw;
           flex-direction:column;
           a{
-            width:50vw;
-            height:50vw;
+            width:30vw;
+            height:30vw;
             background:conic-gradient(#f00 , #ffff00 70%,#ffae00 ,#f00);
             border-radius:100%;
             position:relative;
@@ -73,19 +73,35 @@ $borc: #e6e6eb;
                   width:96%; height:96%;
                border-radius:100%;
               }
-              p{
+              .name{
                 white-space: nowrap;
-                font-size: 4.7vw;
+                font-size: 50px;
+               padding:4vw;
               }
           }
       }
       .myinfo{
+          border-top:1px solid $borc;
+          width:100%; height:40%;
+          padding:4vw;
           .follow{
-              .info_view{
-                  .view{}
-                  .reset{}
-                  .point{}
-              }
+           width:100%; height:100%;
+             flex-wrap:wrap;
+             text-align:center;
+             vertical-align:center;
+                  .view{width:49%; height:5%; padding:2vw 1vw;
+                border:1px solid $borc;
+            border-radius:10px;
+        margin-right:2%;}
+                  .reset{width:49%; height:5%; padding:2vw 1vw;
+                    border:1px solid $borc;
+                    border-radius:10px;}
+                  .point{
+                    margin-top:2%;  
+                    width:100%; height:10%; padding:2vw 1vw;
+                    border:1px solid $borc;
+                    border-radius:10px;}
+              
           }
       }
   }
