--- a/css/common.css
+++ b/css/common.css
@@ -1,4 +1,5 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+/* font-family: 'Roboto', sans-serif; */
 
 html,body{
     margin:0;
@@ -16,6 +17,7 @@ h1,h2,h3,h4,h5,h6,a,div,p{
     word-break:keep-all;
    text-decoration: none;
    color:#222228;
+  font-family: 'Roboto', sans-serif;
 }
 
 
