--- a/css/calender.css
+++ b/css/calender.css
@@ -43,6 +43,16 @@
   opacity: 0;
 }
 
+.headerback a {
+  display: block;
+  float: left;
+  width: 24vw;
+}
+
+.headerback a img {
+  width: 100%;
+}
+
 .background {
   background: #e6e6eb;
 }
@@ -103,7 +113,7 @@
   display: block;
   margin-top: 1.5vw;
   color: #898989;
-  width: 60%;
+  width: 55%;
   height: 30px;
   overflow: hidden;
   text-overflow: ellipsis;
