--- a/css/calender.scss
+++ b/css/calender.scss
@@ -41,6 +41,15 @@ $borc: #e6e6eb;
     height: 10vh;
     background: #fff;
     opacity: 0;
+    a {
+        display: block;
+        float: left;
+        width: 24vw;
+
+        img {
+            width: 100%;
+        }
+    }
    
 }
 .background {
@@ -95,7 +104,7 @@ $borc: #e6e6eb;
                                 display: block;
                                 margin-top: 1.5vw;
                                 color: #898989;
-                                width: 60%;
+                                width: 55%;
                                 height: 30px;
                                 overflow: hidden;
                                 text-overflow: ellipsis;
