--- a/css/help.css
+++ b/css/help.css
@@ -20,13 +20,14 @@
   position: relative;
   padding: 2vw 0 0 2vw;
   width: 100%;
-  height: 10vw;
+  height: auto;
   background: #fff;
   opacity: 0;
 }
 
 .background {
   background: #e6e6eb;
+  margin-top: 2vw;
 }
 
 .background .intro ul {
@@ -62,7 +63,7 @@
 }
 
 .background .data {
-  padding-top: 10vw;
+  padding-top: 5vw;
 }
 
 .background .data ul {
@@ -70,9 +71,9 @@
 }
 
 .background .data ul li {
-  border-top: 1px solid #e6e6eb;
+  border-bottom: 1px solid #e6e6eb;
   height: 48px;
-  padding-left: 2vw;
+  padding-left: 4vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -89,7 +90,7 @@
 .footLink {
   position: fixed;
   left: 0;
-  bottom: 0;
+  bottom: 0%;
   z-index: 100;
   padding: 1% 0;
   width: 100%;
