--- a/css/join.scss
+++ b/css/join.scss
@@ -27,8 +27,7 @@ $borc: #e6e6eb;
     border-bottom: 1px solid $borc;
 
     p {
-        
-        font-size:1.2em;
+        font-size: 1.2em;
         text-align: center;
     }
 }
@@ -36,13 +35,46 @@ $borc: #e6e6eb;
     position: relative;
     padding: 2vw 0 0 2vw;
     width: 100%;
-    height: 10vw;
+    height: 10vh;
     background: #fff;
     opacity: 0;
+    a {
+        display: block;
+        float: left;
+        width: 24vw;
+
+        img {
+            width: 100%;
+        }
+    }
+   
 }
 .background {
     background: $bc;
+    .login {
+        padding:0 4vw 4vw;
+        background: #fff;
+        text-align: center;
+        white-space: pre-line;
+        width: 100%;
+        p {
+            line-height: 1.5em;
+        }
+        a {
+            width:100%;
+            
+            span {
+                
+                background: $mc;
+                border-radius: 10px;
+                width: 80vw;
+                height: 7vw;
+                color: #fff;
+            }
+        }
+    }
     .profile {
+        display: none;
         background: #fff;
 
         .pf_img {
@@ -77,9 +109,8 @@ $borc: #e6e6eb;
                     height: 96%;
                     border-radius: 100%;
                 }
-               
             }
-            .name{
+            .name {
                 white-space: nowrap;
                 font-size: 30px;
                 padding-bottom: 4vw;
@@ -172,7 +203,7 @@ $borc: #e6e6eb;
                                 display: block;
                                 margin-top: 1.5vw;
                                 color: #898989;
-                                width: 60%;
+                                width: 55%;
                                 height: 30px;
                                 overflow: hidden;
                                 text-overflow: ellipsis;
@@ -233,7 +264,7 @@ $borc: #e6e6eb;
                                 display: block;
                                 margin-top: 1.5vw;
                                 color: #898989;
-                                width: 60%;
+                                width: 55%;
                                 height: 30px;
                                 overflow: hidden;
                                 text-overflow: ellipsis;
@@ -294,7 +325,7 @@ $borc: #e6e6eb;
                                 display: block;
                                 margin-top: 1.5vw;
                                 color: #898989;
-                                width: 60%;
+                                width: 55%;
                                 height: 30px;
                                 overflow: hidden;
                                 text-overflow: ellipsis;
