--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,7 @@
   display: block;
   margin-top: 1.5vw;
   color: #898989;
-  width: 60%;
+  width: 55%;
   height: 30px;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -186,7 +186,12 @@
   font-size: 18px;
 }
 
-.background .searchbox .inputarea div img {
+.background .searchbox .inputarea div a {
+  width: 20px;
+  display: block;
+}
+
+.background .searchbox .inputarea div a img {
   width: 20px;
 }
 
