--- a/css/style.scss
+++ b/css/style.scss
@@ -2,20 +2,16 @@
 $mc: #f25170;
 $bc: #e6e6eb;
 $borc: #e6e6eb;
-%list_fomat{
-   
-        border-radius: 4vw;
-        box-shadow: 0.5vw 0.5vw 4vw 0.5vw rgba(59, 59, 59, 0.15);
-        background: #fff;
-        padding: 6vw 0;
-      
+%list_fomat {
+    border-radius: 4vw;
+    box-shadow: 0.5vw 0.5vw 4vw 0.5vw rgba(59, 59, 59, 0.15);
+    background: #fff;
+    padding: 6vw 0;
 }
-%list_h2{
-   
-        font-size: 7vw;
-        font-weight: 900;
-        padding: 0 4vw;
-    
+%list_h2 {
+    font-size: 7vw;
+    font-weight: 900;
+    padding: 0 4vw;
 }
 .header {
     position: fixed;
@@ -85,10 +81,9 @@ $borc: #e6e6eb;
         margin: 6vw 4vw;
         .today-list {
             @extend %list_fomat;
-          
+
             h2 {
                 @extend %list_h2;
-                
             }
             .data-wrap {
                 background: #fff;
@@ -102,8 +97,8 @@ $borc: #e6e6eb;
                     left: 0;
                     top: 4vw;
                     margin-left: 4vw;
-                    display:flex;
-                    flex-wrap:nowrap;
+                    display: flex;
+                    flex-wrap: nowrap;
                     li {
                         float: left;
                         width: 53vw;
@@ -113,7 +108,7 @@ $borc: #e6e6eb;
                             height: 53vw;
                             img {
                                 width: 100%;
-                                height:100%;
+                                height: 100%;
                                 border-radius: 3vw;
                             }
                         }
@@ -131,11 +126,11 @@ $borc: #e6e6eb;
                                 display: block;
                                 margin-top: 1.5vw;
                                 color: #898989;
-                                width:60%;
-                                height:30px;
-                                overflow:hidden;
-                                text-overflow:ellipsis;
-                                white-space:nowrap;
+                                width: 55%;
+                                height: 30px;
+                                overflow: hidden;
+                                text-overflow: ellipsis;
+                                white-space: nowrap;
                             }
                         }
                     }
@@ -175,8 +170,12 @@ $borc: #e6e6eb;
                 font-size: 18px;
             }
             div {
-                img {
+                a {
                     width: 20px;
+                    display:block;
+                    img {
+                        width: 20px;
+                    }
                 }
             }
         }
@@ -382,5 +381,4 @@ $borc: #e6e6eb;
         vertical-align: top;
         position: relative;
     }
-    
-    }
+}
