--- a/css/common.css
+++ b/css/common.css
@@ -1,45 +1,399 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 /* font-family: 'Roboto', sans-serif; */
 
-html,body{
-    margin:0;
+html {
+  margin: 0;
 }
-ul,li{
-    margin:0; padding:0;
-    list-style:none;
+
+body {
+  margin: 0;
 }
-h1,h2,h3,h4,h5,h6,a,div,p{
-    margin:0;padding:0;
-    font-size:14px;
-    font-weight:normal;
-    line-height:1.36;
-    letter-spacing:0;
-    word-break:keep-all;
-   text-decoration: none;
-   color:#222228;
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+li {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+h1 {
+  margin: 0;
+  padding: 0;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 1.36;
+  letter-spacing: 0;
+  word-break: keep-all;
+  text-decoration: none;
+  color: #222228;
   font-family: 'Roboto', sans-serif;
 }
 
-
-*{
-    box-sizing: border-box;
-    
+h2 {
+  margin: 0;
+  padding: 0;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 1.36;
+  letter-spacing: 0;
+  word-break: keep-all;
+  text-decoration: none;
+  color: #222228;
+  font-family: 'Roboto', sans-serif;
+  color: #222;
+  font-size: 60px;
 }
 
-h2{color:#222; font-size:60px;}
-.f_c{
-    display:flex;
-        justify-content:center;
-        align-items:center;
-}
-.f_a{
-    display:flex;
-        justify-content:space-around;
-        align-items:center;
-}
-.f_b{
-    display:flex;
-        justify-content:space-between;
-        align-items:center;
+h3 {
+  margin: 0;
+  padding: 0;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 1.36;
+  letter-spacing: 0;
+  word-break: keep-all;
+  text-decoration: none;
+  color: #222228;
+  font-family: 'Roboto', sans-serif;
 }
 
+h4 {
+  margin: 0;
+  padding: 0;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 1.36;
+  letter-spacing: 0;
+  word-break: keep-all;
+  text-decoration: none;
+  color: #222228;
+  font-family: 'Roboto', sans-serif;
+}
+
+h5 {
+  margin: 0;
+  padding: 0;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 1.36;
+  letter-spacing: 0;
+  word-break: keep-all;
+  text-decoration: none;
+  color: #222228;
+  font-family: 'Roboto', sans-serif;
+}
+
+h6 {
+  margin: 0;
+  padding: 0;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 1.36;
+  letter-spacing: 0;
+  word-break: keep-all;
+  text-decoration: none;
+  color: #222228;
+  font-family: 'Roboto', sans-serif;
+}
+
+a {
+  margin: 0;
+  padding: 0;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 1.36;
+  letter-spacing: 0;
+  word-break: keep-all;
+  text-decoration: none;
+  color: #222228;
+  font-family: 'Roboto', sans-serif;
+}
+
+div {
+  margin: 0;
+  padding: 0;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 1.36;
+  letter-spacing: 0;
+  word-break: keep-all;
+  text-decoration: none;
+  color: #222228;
+  font-family: 'Roboto', sans-serif;
+}
+
+p {
+  margin: 0;
+  padding: 0;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 1.36;
+  letter-spacing: 0;
+  word-break: keep-all;
+  text-decoration: none;
+  color: #222228;
+  font-family: 'Roboto', sans-serif;
+}
+
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.f_c {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.f_a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.f_b {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.background .page .today-list {
+  border-radius: 4vw;
+  -webkit-box-shadow: 0.5vw 0.5vw 4vw 0.5vw rgba(59, 59, 59, 0.15);
+          box-shadow: 0.5vw 0.5vw 4vw 0.5vw rgba(59, 59, 59, 0.15);
+  background: #fff;
+  padding: 6vw 0;
+}
+
+.background .page .today-list h2 {
+  font-size: 7vw;
+  font-weight: 900;
+  padding: 0 4vw;
+}
+
+.header {
+  position: fixed;
+  left: 0;
+  top: 0;
+  padding: 2vw 0 0 2vw;
+  z-index: 100;
+  width: 100%;
+  background: #fff;
+}
+
+.header a {
+  display: block;
+  float: left;
+  width: 24vw;
+}
+
+.header a img {
+  width: 100%;
+}
+
+.headerback {
+  position: relative;
+  padding: 2vw 0 0 2vw;
+  width: 100%;
+  background: #fff;
+  opacity: 0;
+}
+
+.headerback a {
+  display: block;
+  float: left;
+  width: 24vw;
+}
+
+.headerback a img {
+  width: 100%;
+}
+
+.background {
+  background: #e6e6eb;
+}
+
+.background .page {
+  margin: 6vw 4vw;
+}
+
+.background .page .today-list .data-wrap {
+  background: #fff;
+  padding: 4vw;
+  width: 100%;
+  height: 77vw;
+  position: relative;
+  overflow: hidden;
+}
+
+.background .page .today-list .data-wrap .items {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+  white-space: nowrap;
+  -webkit-transition: all .2s;
+  transition: all .2s;
+  -webkit-transform: scale(0.98);
+          transform: scale(0.98);
+  will-change: transform;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  cursor: move;
+  margin-left: 5vw;
+}
+
+.background .page .today-list .data-wrap .items.active {
+  cursor: -webkit-grabbing;
+  cursor: grabbing;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  background: rgba(255, 255, 255, 0.3);
+}
+
+.background .page .today-list .data-wrap .items .item {
+  display: inline-block;
+  width: 53vw;
+  margin-right: 10vw;
+}
+
+.background .page .today-list .data-wrap .items .item .thumb {
+  width: 100%;
+  height: 53vw;
+}
+
+.background .page .today-list .data-wrap .items .item .thumb img {
+  width: 100%;
+  height: 100%;
+  border-radius: 3vw;
+}
+
+.background .page .today-list .data-wrap .items .item .summary h3 {
+  white-space: nowrap;
+  font-size: 4.7vw;
+  margin-top: 2vw;
+  font-weight: 500;
+  width: 70%;
+}
+
+.background .page .today-list .data-wrap .items .item .summary small {
+  opacity: 0.7;
+  font-size: 3.1vw;
+  display: block;
+  margin-top: 1.5vw;
+  color: #898989;
+  width: 55%;
+  height: 30px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.background .footLink {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  z-index: 100;
+  padding: 1% 0;
+  width: 100%;
+  height: auto;
+  text-align: center;
+  border-top: 1px solid #e6e6eb;
+  background: #fff;
+}
+
+.background .footLink a {
+  display: inline-block;
+  font-size: 10px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  width: 33%;
+  height: 100%;
+  padding-top: 36px;
+  vertical-align: top;
+  position: relative;
+}
+
+.background .footLink .home:before {
+  background: url(../img/ic_logo-on.png) no-repeat;
+  background-size: 100% 100%;
+  width: 32px;
+  height: 32px;
+  content: "";
+  position: absolute;
+  top: 3px;
+  left: 50%;
+  margin-left: -16px;
+}
+
+.background .footLink .search:before {
+  background: url(../img/ic_person-off.png) no-repeat;
+  background-size: 100% 100%;
+  width: 32px;
+  height: 32px;
+  content: "";
+  position: absolute;
+  top: 3px;
+  left: 50%;
+  margin-left: -16px;
+}
+
+.background .footLink .about:before {
+  background: url(../img/ic_guide-off.png) center no-repeat;
+  background-size: 80% 80%;
+  width: 32px;
+  height: 32px;
+  content: "";
+  position: absolute;
+  top: 3px;
+  left: 50%;
+  margin-left: -16px;
+}
+
+.background .footLink-back {
+  position: relative;
+  opacity: 0;
+  padding: 1% 0;
+  width: 100%;
+  height: auto;
+  text-align: center;
+  border-top: 1px solid #e6e6eb;
+  background: #fff;
+}
+
+.background .footLink-back a {
+  display: inline-block;
+  font-size: 10px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  width: 33%;
+  height: 100%;
+  padding-top: 36px;
+  vertical-align: top;
+  position: relative;
+}
+/*# sourceMappingURL=common.css.map */
