--- a/css/map.scss
+++ b/css/map.scss
@@ -161,45 +161,64 @@ $borc: #e6e6eb;
         bottom: 0;
         left:0;
 
-        .list-con {
-            display: flex;
-            flex-wrap: nowrap;
-           
+        .items {
+         
             border-radius: 2px;
             padding: 10px 0;
             font-size: 14px;
-            li {
+            position: relative;
+            width:100%;
+            overflow:hidden;
+           white-space:nowrap;
+           transition:all .2s;
+           transform:scale(0.98);
+           will-change:transform;
+           user-select:none;
+           cursor:move;
+            margin-left: 5vw;
+            flex-direction: column;
+            &.active{
+                cursor:grabbing;
+                transform:scale(1);
+                background:rgba(255,255,255,0.3);
+            }
+
+           .item {
                 border: 1px solid rgba(34, 34, 40, 0.15);
                 margin-right: 4vw;
                 padding: 16px 15px;
                 border: 1px solid $borc;
-                width: 440px;
-                flex-wrap:wrap;
-                .con{
-                    width:100%;
+                width: 400px; height:200px;
+               display:inline-block;
+              .con{
+                   
                 .leftsec {
                     display: inline-block;
-                    width: 20%;
+                    width: 30%;
                     font-size: 0;
-                    vertical-align: top;
-                    height: 90px;
+                    padding:1%;           
                     overflow: hidden;
-                    background: url(../img/tangocafe.jpg) center no-repeat;
-                    background-size: auto 100%;
-                }
+                    .thumb {
+                      width:100%; height:100%;
+                        img {
+                            width:100%; height:100%;
+                            border-radius: 3vw;
+                        }
+                      }
+                    }
                 .rightsec {
-                    width: 80%;
+                    width: 70%;
                     display: inline-block;
                     vertical-align: top;
                     box-sizing: border-box;
-                    padding: 0 0 5% 5%;
+                   margin-left:20px;
                     font-size: 0;
                     h4 {
                         font-size: 16px;
-                        margin-bottom: 6px;
+                        margin-bottom: 20px;
 
                         .list_lo {
-                            font-size: 12px;
+                            font-size: 15px;
                             color: #999999;
                         }
                     }
@@ -209,26 +228,22 @@ $borc: #e6e6eb;
                         margin-bottom: 6px;
                     }
                     .address {
-                        font-size: 12px;
+                        font-size: 13px;
                         color: #9999a0;
+                        white-space:pre-wrap;
                     }
                 }
-               
+             
             }
-            a {
-                width: 100%;
-                height: 100%;
-                position: absolute;
-                top: 0;
-                left: 0;
-            }
-        }
+         
+           
             .appraisal {
                 margin:10px auto 0;
                 padding-top:10px;
                 width:94%;
                 text-align:left;
                 border-top:1px solid  #f0f0f3;
+              
                 .like {
                     background: url(../img/ic_like.png) no-repeat;
                     background-size: 16px 16px;
@@ -241,7 +256,8 @@ $borc: #e6e6eb;
                     padding-left: 21px;
                 }
             }
-           
-        }
-    }
-}
+          }//item
+        }//items
+    
+   }//list
+}//slider
