--- a/css/style.scss
+++ b/css/style.scss
@@ -91,31 +91,30 @@ $borc: #e6e6eb;
                 width: 100%;
                 height: 77vw;
                 position: relative;
-                overflow-x:scroll;
-                overflow-y: hidden;
+                overflow:hidden;
 
                 .items {
                     position: relative;
                     width:100%;
-                    overflow-x:scroll;
-                    overflow-y:hidden;
+                    overflow:hidden;
                    white-space:nowrap;
                    transition:all .2s;
                    transform:scale(0.98);
                    will-change:transform;
                    user-select:none;
-                   cursor:pointer;
-                    margin-left: 4vw;
+                   cursor:move;
+                    margin-left: 5vw;
                     
-                    &:active{
+                    &.active{
                         cursor:grabbing;
                         transform:scale(1);
+                        background:rgba(255,255,255,0.3);
                     }
 
                     .item {
                       display:inline-block;
                         width: 53vw;
-                        margin-right: 4vw;
+                        margin-right: 10vw;
                         .thumb {
                             width: 100%;
                             height: 53vw;
