--- a/css/style.scss
+++ b/css/style.scss
@@ -1,5 +1,5 @@
 @import url("common.css");
-$mc: #f25170;
+$mc:#e73827;
 $bc: #e6e6eb;
 $borc: #e6e6eb;
 %list_fomat {
@@ -51,7 +51,7 @@ $borc: #e6e6eb;
     width: 100%;
     padding: 2vw;
     position: relative;
-    background: linear-gradient(90deg, $mc, #facd89);
+    background: linear-gradient(30deg, #000000,#e74c3c);
     span {
         margin-left: 15px;
         display: inline-block;
