--- a/css/style.css
+++ b/css/style.css
@@ -55,8 +55,7 @@
   width: 100%;
   padding: 2vw;
   position: relative;
-  background: -webkit-gradient(linear, left top, right top, from(#f25170), to(#facd89));
-  background: linear-gradient(90deg, #f25170, #facd89);
+  background: linear-gradient(30deg, #000000, #e74c3c);
 }
 
 .location span {
