--- a/css/map.scss
+++ b/css/map.scss
@@ -17,6 +17,7 @@ $borc: #e6e6eb;
 .background {
     background: $bc;
     position: relative;
+    width:100%; height:100vh;
     .searchbox {
         .back {
             position: absolute;
@@ -54,7 +55,8 @@ $borc: #e6e6eb;
                 background-size: 100% 100%;
             }
             input {
-                border: none;
+                border:none;
+                outline-style: none;
                 margin-left: 5%;
                 padding-left: 5%;
                 width: 90%;
@@ -144,14 +146,15 @@ $borc: #e6e6eb;
                 margin-bottom: 5px;
             }
             .map {
-                height: 138px;
+                height: auto;
+               
             }
         }
     }
 }
 .slider {
     position: relative;
-    bottom:-350px;
+    bottom:0px;
     left:0px;
     z-index: 100;
     width: 100%;
@@ -194,7 +197,7 @@ $borc: #e6e6eb;
                 margin-right: 20px;
                 padding: 16px 15px;
                 border: 1px solid $borc;
-                width: 450px; 
+                width: 430px; 
                display:flex;
               .con{
                    
@@ -219,20 +222,27 @@ $borc: #e6e6eb;
                     box-sizing: border-box;
                    margin-left:20px;
                     font-size: 0;
-                    h4 {
-                        font-size: 16px;
-                        margin-bottom: 20px;
-
-                        .list_lo {
+                     > div{
+                        margin-bottom: 6px;
+                        > h4 {
+                            font-size: 16px;
+                           
+                            text-transform:uppercase;
+                           
+                        }
+                        > span {
                             font-size: 15px;
                             color: #999999;
+                            margin-right:15px;
                         }
                     }
-                    .info {
-                        font-size: 12px;
+                   
+                   > h6 {
+                   
                         color: #9999a0;
-                        margin-bottom: 6px;
+                        margin-bottom: 10px;
                     }
+                    
                     .address {
                         font-size: 13px;
                         color: #9999a0;
