--- a/css/map.css
+++ b/css/map.css
@@ -119,35 +119,55 @@
 
 .background .nearbox {
   background: #fff;
-  margin-top: 10px;
-  padding-top: 10px;
-}
-
-.background .nearbox .nearby {
-  padding: 0 15px;
-}
-
-.background .nearbox .nearby h3 {
-  font-size: 18px;
-  margin-bottom: 5px;
-}
-
-.background .nearbox .nearby p {
-  color: #9999a0;
-}
-
-.background .nearbox .nearby p span {
-  font-size: 14px;
+  margin-top: 50px;
 }
 
 .background .nearbox .mapbox {
   border-top: 1px solid #e6e6eb;
-  margin-top: 20px;
 }
 
 .background .nearbox .mapbox .distance {
-  padding-top: 10px;
+  position: fixed;
+  left: 0;
+  top: 80px;
+  width: 100%;
+  z-index: 10;
+  padding: 10px;
   margin-bottom: 5px;
+  background: #fff;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.background .nearbox .mapbox .distance .nearby {
+  width: 100%;
+  padding: 0 15px;
+}
+
+.background .nearbox .mapbox .distance .nearby h3 {
+  font-size: 18px;
+  margin-bottom: 5px;
+}
+
+.background .nearbox .mapbox .distance .nearby p {
+  color: #9999a0;
+}
+
+.background .nearbox .mapbox .distance .nearby p span {
+  font-size: 14px;
+}
+
+.background .nearbox .mapbox .distance .level > a {
+  text-align: center;
+  padding: 3px 5px;
+  width: 100%;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+.background .nearbox .mapbox .distance .level > a p {
+  width: 15vw;
 }
 
 .background .nearbox .mapbox .map {
@@ -223,7 +243,9 @@
 
 .slider .listbox .items .item .con .leftsec {
   display: inline-block;
-  width: 30%;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
   font-size: 0;
   overflow: hidden;
 }
@@ -245,7 +267,10 @@
 }
 
 .slider .listbox .items .item .con .rightsec {
-  width: 300px;
+  -webkit-box-flex: 2;
+      -ms-flex: 2;
+          flex: 2;
+  width: 250px;
   display: inline-block;
   vertical-align: top;
   -webkit-box-sizing: border-box;
