--- a/css/map.scss
+++ b/css/map.scss
@@ -77,49 +77,7 @@ $borc: #e6e6eb;
             }
         }
     }
-    .searchbox-back {
-        position: relative;
-        top: 0;
-        right: 0;
-        width: 95%;
-        opacity: 0;
-        height: 80px;
-        padding: 3vw 5vw;
-        background: #fff;
-        .inputarea {
-            position: relative;
-            padding: 10px 0;
-            margin: 0 auto;
-
-            border-bottom: 1px solid #222228;
-            &:before {
-                position: absolute;
-                top: 13px;
-                left: 0;
-                content: "";
-                width: 19px;
-                height: 19px;
-                background: url(../img/ic_glass-on.png) no-repeat;
-                background-size: 100% 100%;
-            }
-            input {
-                border: none;
-                margin-left: 5%;
-                padding-left: 5%;
-                width: 90%;
-                height: 28px;
-                box-sizing: border-box;
-                display: block;
-                margin: auto;
-                font-size: 18px;
-            }
-            div {
-                img {
-                    width: 20px;
-                }
-            }
-        }
-    }
+  
     .nearbox {
         background: #fff;
         margin-top: 50px;
@@ -155,13 +113,15 @@ $borc: #e6e6eb;
                 }
 
                 .level {
+                    flex-wrap:wrap;
                   > a{
+                       cursor:pointer;
                         text-align:center;
-                        padding:3px 5px;
+                        padding:3px 25px;
                         width:100%;
                         flex:1;
                         p{
-                            width:15vw;
+                            width:100%;
                          
                        
                         }
@@ -172,14 +132,21 @@ $borc: #e6e6eb;
            
             .map {
                 height: auto;
-               
+               margin-top:120px;
+               > p{
+                margin-top:3px;
+                color: #9999a0;
+                a{
+                    color: #9999a0;
+                }
+               }
             }
         }
     }
 }
 .slider {
     position: relative;
-    bottom:0px;
+    bottom:85px;
     left:0px;
     z-index: 100;
     width: 100%;
